--- a/posit-academy/pyproject.toml
+++ b/posit-academy/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "posit_academy", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 pandas = "^2.2.0"
+plotnine = "^0.13.0"
+numpy = "^1.26.4"
+matplotlib = "^3.8.3"
 
 
 [build-system]
