--- a/posit-academy/pyproject.toml
+++ b/posit-academy/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "posit_academy", from = "src"}]
 python = "^3.12"
 jupyter = "^1.0.0"
 pandas = "^2.2.1"
+plotly = "^5.20.0"
 
 
 [build-system]
